2007-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/userid.m4: Use $enableval in AC_ARG_ENABLE.

2007-11-07  Paddy Sreenivasan <paddy@zmanda.com>
	* server-src/amserverconfig.pl server-src/amaddclient.pl: 
          new configuration tools
	* common-src/amgpgcrypt.pl common-src/amcryptsimple.pl: 
          new encryption plugins
	* man/xml-source/amaddclient.8.xml man/xml-source/amgpgcrypt.8.xml 
          man/xml-source/amcryptsimple.8.xml 
	  man/xml-source/amserverconfig.8.xml: man pages for new tools
	* example/template.d/* - Configuration file templates
	* example/amanda-client.conf.in: Updated amanda configuration file
	* example/Makefile.am man/Makefile.am server-src/Makefile.am
          common-src/Makefile.am: Added amserverconfig, amaddclient, 
          amgpgcrypt and amcryptsimple
	* device-src/Makefile.am: Fixed libamdevice version
	* configure.in: Added template files
        * amanda.spec: Updated spec file for new utilities

2007-11-01  Dustin J. Mitchell <dustin@zmanda.com>
	* config/automake/installperms.am: new method of specifying
	  permissions on installed files
	* config/amanda/userid.m4 configure.in: add --disable-installperms
	  to disable any permsisions settings (useful for packaging builds)
	* oldrecover-src/Makefile.am example/Makefile.am
	  changer-src/Makefile.am amplot/Makefile.am
	  client-src/Makefile.am amandad-src/Makefile.am man/Makefile.am
	  dumper-src/Makefile.am recover-src/Makefile.am
	  server-src/Makefile.am restore-src/Makefile.am
	  Makefile.am support/Makefile.am common-src/Makefile.am
	  tape-src/Makefile.am: use installperms.am

2007-11-01  Dustin J. Mitchell <dustin@zmanda.com>
	Suggested by Jon LaBadie
	* config/automake/precompile.am: new rule to make
	  precompiler output files; useful for debugging
	* */Makefile.am: include precompile.am

2007-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* AUTHORS: Add Dustin J. Mitchell.
